<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="6dp"
        android:src="@drawable/bottom_sheet_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_title"
        style="@style/Theme.LT_TestApplication.Headline18"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_sorting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/desc_button_close"
        android:src="@drawable/ic_button_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_title">

        <com.google.android.material.radiobutton.MaterialRadioButton
            style="@style/Theme.LT_TestApplication.RadioButton"
            android:layout_marginHorizontal="16dp"
            android:checked="true"
            android:text="@string/title_sorting_default" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            style="@style/Theme.LT_TestApplication.RadioButton"
            android:layout_marginHorizontal="16dp"
            android:text="@string/title_sorting_date" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>