<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/company_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_title"
        style="@style/Theme.LT_TestApplication.Headline20"
        android:layout_marginTop="32dp"
        android:text="@string/textview_log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_label_phone"
        style="@style/Theme.LT_TestApplication.Body16Medium"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:text="@string/textview_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_phone"
        style="@style/Theme.LT_TestApplication.OutlinedEditText"
        android:layout_marginTop="8dp"
        app:endIconMode="clear_text"
        app:endIconDrawable="@drawable/ic_button_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_label_phone"
        app:placeholderText="Введите номер телефона">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_phone"
            style="@style/Theme.LT_TestApplication.TextInputEditText"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_label_password"
        style="@style/Theme.LT_TestApplication.Body16Medium"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:text="@string/textview_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_phone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_password"
        style="@style/Theme.LT_TestApplication.OutlinedEditText"
        android:layout_marginTop="8dp"
        app:endIconMode="password_toggle"
        app:endIconDrawable="@drawable/password_toggle_icon_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_label_password"
        app:placeholderText="Введите номер телефона">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            style="@style/Theme.LT_TestApplication.TextInputEditText"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_log_in"
        style="@style/Theme.LT_TestApplication.ContainedButton"
        android:enabled="false"
        android:text="@string/button_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>